--- a/base.css
+++ b/base.css
@@ -6,9 +6,11 @@ body {
 }
 
 img {
-  width: 40%;
- 
+  width: 400px;
+  height: 400px;
    margin-top: 20px;
+   object-fit: contain;
+   
 }
 
 .pagePost, .highlight {
