--- a/base.css
+++ b/base.css
@@ -1,18 +1,70 @@
 body {
   background-color: black;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:  Arial, sans-serif, Geneva, Tahoma, sans-serif, Helvetica, sans-serif;
   color:antiquewhite;
-  font-weight: bold;
+  margin-bottom: 50px;
 }
 
-img {
-  width: 400px;
-  height: 400px;
-   margin-top: 20px;
-   object-fit: contain;
-   object-position: bottom;
-    
+a {
+  color: red;
+
 }
+.content {
+  max-width: 800px; 
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0 auto;
+  text-align: justify;
+}
+
+button {  
+  background-color: rgb(35, 35, 128);
+  color:white;
+  border:none;
+  border-radius: 20px;  
+  cursor: pointer;
+  padding: 20px;
+  margin: 5px;
+  font-weight: bold;
+  transition: background-color 0.50s, color 0.50s, opacity 0.4s;
+  border-style: solid;
+  border-width: 2px;
+  
+  }
+
+  
+button:hover { 
+  background-color: rgb(201, 204, 221);
+  color: rgb(14, 14, 71);
+  
+  }
+  
+  button:active {
+    opacity: 0.4;
+  }
+  
+  .wrapImages {
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+    overflow: hidden;
+  }
+
+ .smallImage {
+    margin-top: 30%
+
+  }
+
+  .wrapPostImages {
+    width: 400px;
+    height: 400px;
+    margin: 0 auto;
+    margin-top: 15px;
+  }
+
+  img {
+    width: 100%;
+    border-radius: 30px;
+  }
 
 .pagePost, .highlight {
   max-width: 800px;
@@ -68,6 +120,7 @@ img {
 
   .subHeadings1 {
     background-color: black;
+    font-weight: bold;
   }
 
 .subHeadings2 {
