--- a/base.css
+++ b/base.css
@@ -43,8 +43,7 @@ button:hover {
   }
   
   .wrapImages {
-    width: 300px;
-    height: 300px;
+    width: 70%;
     margin: 0 auto;
     overflow: hidden;
   }
