Added overflow scroll to nav bar

--- a/base.css
+++ b/base.css
@@ -91,7 +91,7 @@ button:hover {
     list-style-type: none;
     margin:0;
     padding:0;
-  
+    overflow: scroll;
   }
 
   .listElements1, .listElements2,.listElements3,.listElements4 {
