--- a/base.css
+++ b/base.css
@@ -92,6 +92,8 @@ button:hover {
     margin:0;
     padding:0;
     overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
 
   .listElements1, .listElements2,.listElements3,.listElements4 {
