--- a/base.css
+++ b/base.css
@@ -9,7 +9,10 @@ a {
   color: red;
 
 }
+
+
 .content {
+
   max-width: 800px; 
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin: 0 auto;
@@ -46,6 +49,7 @@ button:hover {
     width: 80%;
     margin: 0 auto;
     overflow: hidden;
+    max-width: 300px;
   }
 
  .smallImage {
@@ -86,18 +90,14 @@ button:hover {
 }
 
 .navigationBar {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    list-style-type: none;
-    margin:0;
-    padding:0;
-    overflow: scroll;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   .listElements1, .listElements2,.listElements3,.listElements4 {
     border-radius: 8px;
-    padding: 20px;
-    margin: 10px;
+    padding: 20px 13px;
     background-color: blue;
     color:white;
     transition: background-color 0.4s, color 0.4s;
