--- a/base.css
+++ b/base.css
@@ -1,8 +1,8 @@
 body {
   background-color: black;
-  font-family:  Arial, sans-serif, Geneva, Tahoma, sans-serif, Helvetica, sans-serif;
-  color:antiquewhite;
-  margin-bottom: 50px;
+  font-family: Arial, sans-serif, Geneva, Tahoma, sans-serif, Helvetica, sans-serif;
+  color: antiquewhite;
+
 }
 
 a {
@@ -13,17 +13,20 @@ a {
 
 .content {
 
-  max-width: 800px; 
+  max-width: 800px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin: 0 auto;
   text-align: justify;
+  box-shadow: 0 0 10px rgb(74, 74, 163);
+  border-radius: 8px;
+  padding: 8px 10px;
 }
 
-button {  
+button {
   background-color: rgb(35, 35, 128);
-  color:white;
-  border:none;
-  border-radius: 20px;  
+  color: white;
+  border: none;
+  border-radius: 20px;
   cursor: pointer;
   padding: 20px;
   margin: 5px;
@@ -31,45 +34,45 @@ button {
   transition: background-color 0.50s, color 0.50s, opacity 0.4s;
   border-style: solid;
   border-width: 2px;
-  
-  }
 
-  
-button:hover { 
+}
+
+
+button:hover {
   background-color: rgb(201, 204, 221);
   color: rgb(14, 14, 71);
-  
-  }
-  
-  button:active {
-    opacity: 0.4;
-  }
-  
-  .wrapImages {
-    width: 80%;
-    margin: 0 auto;
-    overflow: hidden;
-    max-width: 300px;
-  }
+  box-shadow: 0 0 4px gray;
 
- .smallImage {
-    margin-top: 30%
+}
 
-  }
+button:active {
+  opacity: 0.4;
+}
 
-  .wrapPostImages {
-    width: 400px;
-    height: 400px;
-    margin: 0 auto;
-    margin-top: 15px;
-  }
+.wrapImages {
+  width: 80%;
+  margin: 0 auto;
+  overflow: hidden;
+  max-width: 300px;
+}
 
-  img {
-    width: 100%;
-    border-radius: 30px;
-  }
+.smallImage {
+  margin-top: 30%
+}
 
-.pagePost, .highlight {
+.wrapPostImages {
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 15px;
+}
+
+img {
+  width: 100%;
+  border-radius: 30px;
+}
+
+.pagePost,
+.highlight {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
@@ -90,36 +93,47 @@ button:hover {
 }
 
 .navigationBar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background: linear-gradient(to right, black, blue, black);
+  box-shadow: 0 0 10px rgb(72, 72, 159);
+  border-radius: 8px;
+  margin: 10px 0;
+}
 
-  .listElements1, .listElements2,.listElements3,.listElements4 {
-    border-radius: 8px;
-    padding: 20px 13px;
-    background-color: blue;
-    color:white;
-    transition: background-color 0.4s, color 0.4s;
-    cursor:pointer;
-  }
-  
-  .listElements1:hover, .listElements2:hover, .listElements3:hover, .listElements4:hover { 
-    background-color: antiquewhite;
-    color: blue;
-  }   
+.listElements1,
+.listElements2,
+.listElements3,
+.listElements4 {
+  border-radius: 8px;
+  padding: 20px 13px;
+  background-color: blue;
+  color: white;
+  transition: background-color 0.4s, ease-in-out;
+  cursor: pointer;
+}
 
-  .pageLinks {
-    text-decoration: none;
-    font-weight: bold;
-    color:#ffffff;
-    padding:10px;
-  }
+.listElements1:hover,
+.listElements2:hover,
+.listElements3:hover,
+.listElements4:hover {
+  background-color: antiquewhite;
+  color: blue;
+  box-shadow: 0 0 4px gray;
+  transition: background-color 0.3s ease-in-out;
+}
 
-  .subHeadings1 {
-    background-color: black;
-    font-weight: bold;
-  }
+.pageLinks {
+  text-decoration: none;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.subHeadings1 {
+  background-color: black;
+  font-weight: bold;
+}
 
 .subHeadings2 {
   font-weight: 100;
